<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- News Section -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navallnews"
            android:icon="@drawable/ic_news_placeholder"
            android:title="Top News"
            android:iconTint="@color/nav_item_color_selector" />

        <item
            android:id="@+id/navsports"
            android:icon="@drawable/ic_sports"
            android:title="@string/nav_sports"
            android:iconTint="@color/nav_item_color_selector" />

        <item
            android:id="@+id/navevents"
            android:icon="@drawable/ic_events"
            android:title="@string/nav_events"
            android:iconTint="@color/nav_item_color_selector" />

        <item
            android:id="@+id/navfacultynews"
            android:icon="@drawable/ic_faculty"
            android:title="@string/nav_faculty_news"
            android:iconTint="@color/nav_item_color_selector" />
    </group>

    <!-- Account Section with Visual Separation -->
    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/navprofile"
                android:icon="@drawable/ic_person"
                android:title="My profile"
                android:iconTint="@color/nav_item_color_selector" />

            <item
                android:id="@+id/navsettings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings"
                android:iconTint="@color/nav_item_color_selector" />

            <item
                android:id="@+id/navlogout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout"
                android:iconTint="@color/nav_item_color_selector" />
        </menu>
    </item>
</menu>
